# mcp-client-with-n8n

./: .env.example  .gitignore  Makefile  README.md  main.py  mcp-filesystem-test.txt  pyproject.toml  requirements-dev.txt  requirements.txt
