[project]
name = "mcp-with-n8n"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.82.0",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
alternative = [
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "sseclient-py>=1.8.0",
]
