[project]
name = "mcp-with-n8n"
version = "0.1.0"
description = "MCP with n8n Integration - OpenAI Responses API with Model Context Protocol support"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.82.0",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
alternative = [
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "sseclient-py>=1.8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "sseclient-py>=1.8.0",
]
